sewt up .env.template file

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,14 @@ asgiref==3.9.1
 cachetools==6.2.2
 certifi==2025.7.14
 charset-normalizer==3.4.4
+click==8.3.1
+croniter==6.0.0
 Django==5.2.4
 django-cors-headers==4.7.0
 django-extensions==4.1
 django-filter==25.1
+django-redis==6.0.0
+django-rq==3.2.2
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 dotenv==0.9.9
@@ -20,28 +24,31 @@ google-genai==1.53.0
 googleapis-common-protos==1.72.0
 grpcio==1.76.0
 grpcio-status==1.71.2
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httplib2==0.31.0
 httpx==0.28.1
 idna==3.11
 numpy==2.3.1
-openai-whisper @ git+https://github.com/openai/whisper.git@c0d2f624c09dc18e709e37c2ad90c039a4eb72a2
+packaging==25.0
 pillow==12.0.0
 proto-plus==1.26.1
 protobuf==5.29.5
+psycopg2-binary==2.9.11
 pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.12.5
 pydantic_core==2.41.5
 PyJWT==2.10.1
-pylance==0.31.1
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
+redis==7.1.0
 requests==2.32.5
+rq==2.6.1
 rsa==4.9.1
 semantic-version==2.10.0
 setuptools==80.9.0
@@ -58,4 +65,5 @@ urllib3==2.5.0
 websockets==15.0.1
 wheel==0.45.1
 whispercpp==0.0.17
+whitenoise==6.11.0
 yt-dlp==2025.11.12
