--- a/.env.template
+++ b/.env.template
@@ -18,10 +18,11 @@ REDIS_LOCATION=redis://redis:6379/1
 REDIS_PORT=6379
 REDIS_DB=0
 
-EMAIL_HOST=smtp.example.com
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=smtp.all-inkl.com
 EMAIL_PORT=587
-EMAIL_HOST_USER=videoflix_email_user
-EMAIL_HOST_PASSWORD=D3xt3R-2k14
+EMAIL_HOST_USER=me@tina-joelly.at
+EMAIL_HOST_PASSWORD=U3ittZyi9Lg8nbnJxKJU
 EMAIL_USE_TLS=True
 EMAIL_USE_SSL=False
-DEFAULT_FROM_EMAIL=default_from_email
+DEFAULT_FROM_EMAIL=me@tina-joelly.at
