--- a/.env.template
+++ b/.env.template
@@ -19,7 +19,7 @@ REDIS_PORT=6379
 REDIS_DB=0
 
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
-EMAIL_HOST=smtp.all-inkl.com
+EMAIL_HOST=w0201827.kasserver.com
 EMAIL_PORT=587
 EMAIL_HOST_USER=me@tina-joelly.at
 EMAIL_HOST_PASSWORD=U3ittZyi9Lg8nbnJxKJU
