--- a/.env.template
+++ b/.env.template
@@ -1,28 +1,30 @@
-DJANGO_SUPERUSER_USERNAME=tinajoelly
-DJANGO_SUPERUSER_PASSWORD=D3xt3R-2k14
-DJANGO_SUPERUSER_EMAIL=tina_joelly@gmx.at
+DJANGO_SUPERUSER_USERNAME=
+DJANGO_SUPERUSER_PASSWORD=
+DJANGO_SUPERUSER_EMAIL=
 
-SECRET_KEY="django-insecure-*u_6nzq%lr##p#f3!dmer+5l5j9y_^o5%6&@(*!-&+t5y7%^oe"
-DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1
-CSRF_TRUSTED_ORIGINS=http://localhost:5500,http://127.0.0.1:5500
+SECRET_KEY=
+DEBUG=
+ALLOWED_HOSTS=
+CSRF_TRUSTED_ORIGINS=
 
-DB_NAME=videoflix_db
-DB_USER=videoflix_db_user
-DB_PASSWORD=D3xt3R-2k14
-DB_HOST=db
-DB_PORT=5432
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
 
-REDIS_HOST=redis
-REDIS_LOCATION=redis://redis:6379/1
-REDIS_PORT=6379
-REDIS_DB=0
+REDIS_HOST=
+REDIS_LOCATION=
+REDIS_PORT=
+REDIS_DB=
 
-EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
-EMAIL_HOST=w0201827.kasserver.com
-EMAIL_PORT=587
-EMAIL_HOST_USER=me@tina-joelly.at
-EMAIL_HOST_PASSWORD=U3ittZyi9Lg8nbnJxKJU
-EMAIL_USE_TLS=True
-EMAIL_USE_SSL=False
-DEFAULT_FROM_EMAIL=me@tina-joelly.at
+EMAIL_BACKEND=
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+EMAIL_USE_TLS=
+EMAIL_USE_SSL=
+DEFAULT_FROM_EMAIL=
+
+FONTEND_URL=
